# pyDelft3D-FLOW

./: .gitignore  Delft3D_NetCDF_Output_overview.md  LICENSE  Multirun.md  environment.yaml  pyproject.toml  readme.md  requirements.txt
example_input/Run01/: 20_20.mor  36km_1cellchannel_15km.enc  36km_200m_W60Channel.mdf  36km_26km_W60Channel.grd  5050_15.bcc  NEWd3d_run_flow2d3d.sh  QChannelZdeep.bnd  SandSilt.sed  VanRijn07.tra  bulk20.inb  config_d_hydro.xml  config_flow2d3d.ini  discharge4500.bct  f34.url  gen_36_by_26km.dep
notebooks/: HigherRhoSol.sed  Input.ipynb  InputBC.ipynb  MultiRun.ipynb  Output3D.ipynb  OutputMultiple.ipynb  OutputVertical.ipynb  OverwriteNetCDF.ipynb
pyd3d/: __init__.py
pyd3d/input/: D3DModel.py  SedMor.py  SlopeBreak.py  TimeSeries.py  __init__.py  dep.py  enc.py  grid.py  mdf.py  multipleruns.py  profilebc.py
pyd3d/output/: fixgrid.py  plotPyVista.py  processNetCDF.py  processing_2d.py  verticalslice.py
