[tool.poetry]
name = "pyd3d"
version = "0.1.0"
description = "Python tools to manipulate Delft3D(4)-FLOW input and output"
authors = ["JulesBlm <julesblom@gmail.com>"]
maintainers = ["JulesBlm <julesblom@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
imageio-ffmpeg = "^0.4.2"
widgetsnbextension = "^3.5.1"
hvplot = "^0.6.0"
bezier = "^2020.5.19"
xarray = "^0.15.1"
cmocean = "^2.0"
datashader = "^0.11.0"
matplotlib = "^3.1.3"
pyvista = "^0.25.3"
numpy = "^1.18.5"
pandas = "^1.0.4"
holoviews = "^1.12.7"
netcdf4 = "^1.5.3"
dask = {extras = ["dataframe"], version = "^2.11.0"}
ipympl = "^0.5.2"
colorcet = "^2.0.2"
jupyterlab = "^2.1.4"
itkwidgets = { version = "^0.29.0", optional = true }

[tool.poetry.extras]
itk = ["itkwidgets"]


[tool.poetry.dev-dependencies]

[tool.poetry2conda]
name = "pyd3d"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
